--- a/xs.css
+++ b/xs.css
@@ -132,7 +132,7 @@ body {
     color:whitesmoke;
 }
 #scroll{
-    background:url(img/sbg.png);
+    background:url("img/sbg.png");
     background-size: contain;
     overflow:hidden;
     display:flex;
