--- a/xs.css
+++ b/xs.css
@@ -1,6 +1,6 @@
 * { margin: 0; padding: 0;  }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 500px) {
     
     #navbar{
     display:block;
@@ -37,7 +37,7 @@
 }
 
 
-@media only screen and (min-width: 700px){
+@media only screen and (min-width: 500px){
     #navbar{
     display:block;
     position:fixed;
@@ -115,6 +115,71 @@ body {
     background: #000;
     
      }
+.lc{
+    
+    position:relative;
+    float:left;
+    height:100%;
+    width:100%;
+}
+.list{
+    
+    display:flex;
+    align-items: stretch; /* Default */
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    /*margin:25% 0;*/
+}
+.listitem{
+   
+    width:30%;
+    height:auto;
+    
+    
+}
+.listitem img {
+    height:100px;
+    width:100px;
+    /*background-color: whitesmoke;*/
+}
+.listitem span{
+    display:block;
+   font-weight: bold;
+    font-size: 1.25em;
+    text-align:center;
+}
+.listitem p{
+    font-size: 1em;
+}
+#topper{
+        height:150px;
+    }
+#sbg{height:300%;}
+#bm{position:absolute; left:-10%;}
+#navbar2{
+    background: #333;    
+    display: flex;
+    align-items: stretch; /* Default */
+    justify-content: space-between;
+}
+#navbar2 li{
+    position:relative;
+    display:inline-block;
+    margin: auto;
+}
+#navbar2 li a{
+    
+    text-decoration: none;
+    color:white;
+    font-size: 2em;
+    font-family: fantasy;
+    margin: auto;
+}
+#products{
+    /*background:url(img/sbg.png);*/
+    background-color:lightgray;
+    background-size: cover;
+}
 #title  {
     text-align:center;
      top:5%;
@@ -269,6 +334,26 @@ body {
 .bg {position:absolute; display: block; height:100%; width:100%; z-index:-20;}
 #bgxTop {position:relative; height:50%; width:100%; }
 #bgx {position:absolute; bottom:0px; height:50%; width:100%; object-fit:cover; }
+.bc{
+    
+    display:flex;
+    align-items: stretch; /* Default */
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    margin:2% 0;
+}
+button{
+    background-color:firebrick;
+    background-image:url(img/sbg.png);
+    border-radius:25px;
+    color:antiquewhite;
+    font-size:2em;
+    text-shadow: 10px;
+    padding:10px;
+    
+    position:relative;
+}
+
 #logo{
     float:left;
     position:absolute;
@@ -292,6 +377,14 @@ body {
     height:100%;
     width:100%;
 }
+.card span{
+    font-weight: bold;
+    text-align:center;
+    font-size:2em;
+}
+.card p {
+    font-size:1.5em;
+}
 .fcard {
     display: block;
     float:left;
@@ -299,6 +392,25 @@ body {
     width:33%;
     margin:auto;
     text-align:center;
+}
+.fcard p{
+    font-size:0.5em;
+}
+.ocard {
+    display: block;
+    float:left;
+    height:100%;
+    width:33%;
+    margin:auto;
+    text-align:center;
+}
+.ocard span{
+    font-weight: bold;
+    text-align:center;
+    font-size:1em;
+}
+.ocard p {
+    font-size: 1em;
 }
 .hwcard {
     display: block;
