--- a/xs.css
+++ b/xs.css
@@ -6,7 +6,7 @@
     display:block;
     position:absolute;
     top: 20%;
-    width:25%;
+    width:27%;
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -38,11 +38,13 @@
 
 
 @media only screen and (min-width: 500px){
+    
+    
     #navbar{
     display:block;
     position:fixed;
     top: 50%;
-    width:15%;
+    width:25%;
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -359,11 +361,13 @@ button{
     position:absolute;
     height:100%;
     width:100%;
+    display:flex;
 }
 #logo img {
     position:relative;
     height:100%;
     width:100%;
+    
 }
 .card {
     
