--- a/xs.css
+++ b/xs.css
@@ -12,7 +12,7 @@
 }
 */
 .card span{
-    font-family:sans-serif;
+    font-family:serif;
     letter-spacing: 0.2rem;
     display:block;
    font-weight: bold;
@@ -23,6 +23,7 @@
 .card p{
     font-size: 1.5em;
     color:#b0b5b8;
+    font-family:sans-serif;
 }
     
     #navbar{
@@ -227,7 +228,7 @@
 }
 */
 .card span{
-    font-family:sans-serif;
+    font-family:serif;
     letter-spacing: 0.2rem;
     display:block;
    font-weight: bold;
@@ -236,6 +237,7 @@
     color:#b88c5b;
 }
 .card p{
+    font-family:sans-serif;
     font-size: 2em;
     color:#b0b5b8;
 }
@@ -496,6 +498,51 @@ body {
     width:50%;
   }
 */
+
+
+#social {display:flex; justify-content: center;}
+
+#social li{list-style: none; width:15%; padding:1em;}
+
+#contact{
+    color:white;
+}
+#contact input{
+    background-color:#1b2024;
+    width:95%;
+    padding:0.1em;
+    margin:0.1em;
+    font-size:1em;
+    line-height: 2em;
+    color:white;
+}
+#contact input[type=submit]{
+    background: #b88c5b;
+    color:whitesmoke;
+    border:none;
+    padding:0.5em;
+    font-size:1em;
+    width:50%;
+}
+#contact label{
+    color:#b88c5b;
+    font-family:sans-serif;
+    letter-spacing: 0.1rem;
+    margin:0.2em;
+    padding:0.2em;
+}
+#message {
+    width:95%;
+    height:100px;
+    background-color:#1b2024;
+    padding:0.1em;
+    margin:0.1em;
+    font-size:1.5em;
+    line-height: 2em;
+} 
+
+.bgc{background:#12171a;}
+
 .lc{
     
     position:relative;
@@ -707,3 +754,29 @@ button{
     width:20%;
     height:50%;
 }
+
+.scard {
+    display:block;
+    height:100%;
+    width:100%;
+}
+.scard span{
+    
+    text-align:left;
+    font-size:2em;
+    font-family:serif;
+}
+.scard p{
+    
+    font-size:1em;
+    font-family:sans-serif;
+}
+.scard img{
+    position:relative;
+    margin-left:10%;
+    height:15%;
+    width:15%;
+}
+
+.textleft {text-align:left;}
+.hunner{width:70%;}
