--- a/xs.css
+++ b/xs.css
@@ -1,4 +1,24 @@
 * { margin: 0; padding: 0;  }
+@font-face {
+  font-family: blackdrama;
+  src: url(font/blackdramaOTF/blackdrama.otf);
+}
+@font-face {
+  font-family: sacredbridge;
+  src: url(font/sacredbridgeOTF/SacredBridge-Regular.otf);
+}
+@font-face {
+  font-family: minionpro;
+  src: url(font/minionproOTF/MinionPro-Regular.otf);
+}
+@font-face {
+  font-family: timegates;
+  src: url(font/timegatesOTF/Timegates-Regular.otf);
+}
+@font-face {
+  font-family: primus;
+  src: url(font/primusTTF/PR-Columban-Primus.ttf);
+}
 
 @media only screen and (max-width: 500px) {
  /*
@@ -12,10 +32,10 @@
 }
 */
 .card span{
-    font-family:serif;
+    font-family:timegates,serif;
     letter-spacing: 0.2rem;
     display:block;
-   font-weight: bold;
+   font-weight: normal;
     font-size: 2em;
     text-align:center;
     color:#b88c5b;
@@ -23,7 +43,8 @@
 .card p{
     font-size: 1.5em;
     color:#b0b5b8;
-    font-family:sans-serif;
+    font-family:minionpro,sans-serif;
+    padding:0.5em 1em;
 }
     
     #navbar{
@@ -49,7 +70,7 @@
     padding: 5px 16px;
     text-decoration: none;
     font-weight: bold;
-    font-family: Verdana, Arial, Helvetica, sans-serif;
+    font-family: blackdrama,Verdana, Arial, Helvetica, sans-serif;
     font-size:1em;
 }
 
@@ -63,7 +84,7 @@
     color: white;
     text-decoration: none;
     font-weight: bold;
-    font-family: Verdana, Arial, Helvetica, sans-serif;
+    font-family: minionpro,Verdana, Arial, Helvetica, sans-serif;
     font-size:0.5em;
     margin-top:5%;
 }
@@ -72,7 +93,7 @@
     color: #f5ca00;
     text-decoration: none;
     font-weight: bold;
-    font-family: Verdana, Arial, Helvetica, sans-serif;
+    font-family: blackdrama,Verdana, Arial, Helvetica, sans-serif;
     font-size:0.75em;
 }
 
@@ -116,7 +137,7 @@
 #title h1 {
    
     top:0%;
-    font-family: fantasy;
+    font-family: blackdrama;
     font-size: 2em;
     font-variant: small-caps;
     color:orange;
@@ -140,15 +161,16 @@
     color:#fff;
 }
 #nu {
-    font-family:monospace;
+    font-family:timegates,monospace;
     font-size: 2em;
     text-align:center;
-    font-weight: bold;
+    font-weight: normal;
+    letter-spacing: .2rem;
     color:lemonchiffon;
 }
 
 #deta{
-    font-family:sans-serif;
+    font-family:minionpro,sans-serif;
     font-size: 1em;
     text-align:left;
     padding:1em;
@@ -213,6 +235,49 @@
 #bm{position:absolute; left:-10%; }
     
 #topper{height:200px;}
+
+#navbar2 li a{
+    
+    text-decoration: none;
+    color:lightgrey;
+    font-size: 1em;
+    font-family: blackdrama,sans-serif;
+    font-variant:small-caps;
+    letter-spacing: 0.1rem;
+    line-height: 2em;
+    margin: auto;
+}
+
+.cardc{
+    
+    width:100px;
+    float:left;
+    margin:0 0.5em;
+}
+.cardc span{
+    font-family:serif;
+    font-size:1em;
+}
+.cardc p{
+    font-family:sans-serif;
+    font-size:0.75em;
+}
+.scroller{
+    display:block;
+    width:200%;
+    height:100px;
+    
+    padding:0 1em;
+}
+.gcard{float:left; height:100px; width:100px; margin:0.5em;}
+.gcard img{height:100%; width:100%; border-radius:10px;}
+.gallery{
+    height:auto;
+    width:100%;
+    padding:5%;
+}
+
+    
 }
 
 
@@ -228,18 +293,19 @@
 }
 */
 .card span{
-    font-family:serif;
+    font-family:timegates,serif;
     letter-spacing: 0.2rem;
     display:block;
-   font-weight: bold;
+   font-weight: normal;
     font-size: 3em;
     text-align:center;
     color:#b88c5b;
 }
 .card p{
-    font-family:sans-serif;
+    font-family:minionpro,sans-serif;
     font-size: 2em;
     color:#b0b5b8;
+    padding:1em;
 }
     
     #navbar{
@@ -266,7 +332,7 @@
     padding: 14px 16px;
     text-decoration: none;
     font-weight: bold;
-    font-family: Verdana, Arial, Helvetica, sans-serif;
+    font-family: blackdrama,Verdana, Arial, Helvetica, sans-serif;
     font-size:3em;
 }
 
@@ -280,7 +346,7 @@
     color: white;
     text-decoration: none;
     font-weight: bold;
-    font-family: Verdana, Arial, Helvetica, sans-serif;
+    font-family: minionpro,Verdana, Arial, Helvetica, sans-serif;
     font-size:1em;
     margin-top:2%;
 }
@@ -289,7 +355,7 @@
     color: #f5ca00;
     text-decoration: none;
     font-weight: bold;
-    font-family: Verdana, Arial, Helvetica, sans-serif;
+    font-family: blackdrama,Verdana, Arial, Helvetica, sans-serif;
     font-size:1.5em;
 }
 
@@ -333,7 +399,7 @@
 #title h1 {
    position:relative;
     top:0%;
-    font-family: fantasy;
+    font-family: blackdrama;
     font-size: 4em;
     font-variant: small-caps;
     color:orange;
@@ -357,15 +423,15 @@
     color:#fff;
 }
 #nu {
-    font-family:monospace;
+    font-family:timegates,monospace;
     font-size: 4em;
     text-align:center;
-    font-weight: bold;
+    font-weight: normal;
     color:lemonchiffon;
 }
 
 #deta{
-    font-family:sans-serif;
+    font-family:minionpro,sans-serif;
     font-size: 2em;
     text-align:center;
     padding:0.25em;
@@ -436,6 +502,51 @@
 #bm{position:absolute; left:-10%; height:100%; width:45%;}
 
     #topper{height:400px;}
+    
+    #navbar2 li a{
+    
+    text-decoration: none;
+    color:lightgrey;
+    font-size: 2em;
+    font-family: blackdrama,sans-serif;
+    font-variant:small-caps;
+    letter-spacing: 0.2rem;
+    margin: auto;
+}
+ 
+.cardc{
+    
+    width:300px;
+    float:left;
+    margin:0 1em;
+}
+.cardc span{
+    font-size:1.2em;
+    font-family: serif;
+}
+.cardc p{
+    font-size:1em;
+    font-family: sans-serif;
+}
+.scroller{
+    display:block;
+    width:200%;
+    height:200px;
+    
+    padding:0 1em;
+}
+ 
+.gcard{float:left; height:20%; width:20%; margin:2%;}
+.gcard img{height:100%; width:100%;}
+.gallery{
+    display:block;
+    overflow:hidden;
+    /*align-content: center;*/
+    height:auto;
+    width:98%;
+    padding:0%;
+}
+    
 }
 
 
@@ -522,6 +633,7 @@ body {
     border:none;
     padding:0.5em;
     font-size:1em;
+    font-family: primus,sans-serif;
     width:50%;
 }
 #contact label{
@@ -576,16 +688,7 @@ body {
     display:inline-block;
     margin: auto;
 }
-#navbar2 li a{
-    
-    text-decoration: none;
-    color:lightgrey;
-    font-size: 2em;
-    font-family: fantasy;
-    font-variant:small-caps;
-    letter-spacing: 0.2rem;
-    margin: auto;
-}
+
 
 #products{
     /*background:url(img/sbg.png);*/
@@ -646,7 +749,7 @@ button{
     font-size:2em;
     text-shadow: 10px;
     padding:10px;
-    
+    font-family: primus,sans-serif;
     position:relative;
 }
 
@@ -763,13 +866,13 @@ button{
 .scard span{
     
     text-align:left;
-    font-size:2em;
-    font-family:serif;
+    font-size:1.5em;
+    font-family:primus,serif;
 }
 .scard p{
     
     font-size:1em;
-    font-family:sans-serif;
+    font-family:minionpro,sans-serif;
 }
 .scard img{
     position:relative;
@@ -780,3 +883,54 @@ button{
 
 .textleft {text-align:left;}
 .hunner{width:70%;}
+.hunner span{padding:0;}
+.hunner p{padding:0;}
+
+.cardc img{
+    border-radius: 25px;
+}
+.fcard a{
+    border-radius: 5px;
+}
+.scrollcontain{
+    overflow-y:hidden;
+    overflow-x:auto;
+    
+    
+}
+#cover{
+    position:absolute;
+    bottom:0;
+    width:100%;
+    height:25px;
+    
+}
+
+#hl img{
+    height:90%;
+    width:90%;
+    margin-top: 3%;
+    margin-left:2%;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+/*
+.scrollcontain::-webkit-scrollbar {
+    display: none;
+}
+.scrollcontain::-webkit-scrollbar-track {
+  background: #000; 
+}
+*/
+.mcard {height:100%; width:15%;float:left;}
+.mcard img{height:80%; width:80%;}
+.mcard span{
+    font-family:primus,serif;
+    font-size:0.75em;
+}
+.mcard p{
+    font-family:sans-serif;
+    font-size:0.75em;
+    text-align: center;
+    padding:0;
+}
