--- a/xs.css
+++ b/xs.css
@@ -20,6 +20,23 @@
   src: url(font/PrimusTTF/PR-Columban-Primus.ttf);
 }
 
+
+
+.card {
+    
+    position:relative;
+    float:left;
+    height:100%;
+    width:100%;
+}
+.card img {
+    position:relative;
+    height:100%;
+    width:100%;
+}
+
+
+
 @media only screen and (max-width: 500px) {
  /*
     .card span{
@@ -250,7 +267,7 @@
 
 .cardc{
     
-    width:100px;
+    width:250px;
     float:left;
     margin:0 0.5em;
 }
@@ -262,13 +279,33 @@
     font-family:sans-serif;
     font-size:0.75em;
 }
-.scroller{
-    display:block;
-    width:200%;
-    height:100px;
+.scroller2{
+    display:inline-block;
+    width:500%;
+    height:auto;
     
-    padding:0 1em;
+    padding:0 0.25em;
 }
+.scroller{
+    display:inline-block;
+    width:500%;
+    height:150px;
+    
+    padding:0 0.25em;
+}
+.mcard {height:100%; width:250px; float:left;}
+.mcard img{height:80%; width:80%; margin-left:10%;}
+.mcard span{
+    font-family:primus,serif;
+    font-size:0.75em;
+}
+.mcard p{
+    font-family:sans-serif;
+    font-size:0.75em;
+    text-align: center;
+    padding:0;
+}
+    
 .gcard{float:left; height:100px; width:100px; margin:0.5em;}
 .gcard img{height:100%; width:100%; border-radius:10px;}
 .gallery{
@@ -533,7 +570,7 @@
  
 .cardc{
     
-    width:300px;
+    width:400px;
     float:left;
     margin:0 1em;
 }
@@ -545,14 +582,35 @@
     font-size:1em;
     font-family: sans-serif;
 }
+.scroller2{
+    display:inline-block;
+    
+    width:200%;
+    height:auto;
+    
+    padding:0 1em;
+}
 .scroller{
-    display:block;
+    display:inline-block;
+    
     width:200%;
     height:200px;
     
     padding:0 1em;
 }
- 
+.mcard {height:100%; width:350px; float:left;}
+.mcard img{height:80%; width:80%; margin-left:10%; }
+.mcard span{
+    font-family:primus,serif;
+    font-size:1em;
+}
+.mcard p{
+    font-family:sans-serif;
+    font-size:1em;
+    text-align: center;
+    padding:0;
+}
+    
 .gcard{float:left; height:20%; width:20%; margin:2%;}
 .gcard img{height:100%; width:100%;}
 .gallery{
@@ -565,7 +623,6 @@
 }
     
 }
-
 
 #anim3{overflow:hidden;}
 #anim2{position: absolute;}
@@ -783,18 +840,6 @@ button{
     width:100%;
     
 }
-.card {
-    
-    position:relative;
-    float:left;
-    height:100%;
-    width:100%;
-}
-.card img {
-    position:relative;
-    height:100%;
-    width:100%;
-}
 
 .fcard {
     display: block;
@@ -933,15 +978,4 @@ button{
   background: #000; 
 }
 */
-.mcard {height:100%; width:15%;float:left;}
-.mcard img{height:80%; width:80%;}
-.mcard span{
-    font-family:primus,serif;
-    font-size:0.75em;
-}
-.mcard p{
-    font-family:sans-serif;
-    font-size:0.75em;
-    text-align: center;
-    padding:0;
-}
+
