--- a/xs.css
+++ b/xs.css
@@ -794,13 +794,11 @@ body {
 }
 
 
-#topper{
-        
-    }
+
 #sbg{height:300%;}
 
 #navbar2{
-    background: transparent;    
+    background: #222;    
     display: flex;
     align-items: stretch; /* Default */
     justify-content: space-between;
