--- a/xs.css
+++ b/xs.css
@@ -293,8 +293,8 @@
     
     padding:0 0.25em;
 }
-.mcard {height:100%; width:250px; float:left;}
-.mcard img{height:80%; width:60%; margin-left:20%;}
+.mcard {height:100%; width:230px; float:left;}
+.mcard img{height:80%; width:70%; margin-left:15%;}
 .mcard span{
     font-family:primus,serif;
     font-size:0.75em;
@@ -639,7 +639,12 @@
 .gcard{float:left; height:20%; width:20%; margin:2%;}
 .gcard img{height:100%; width:100%;}
 .gallery{
-    display:block;
+    display:flex;
+        flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+
     overflow:hidden;
     /*align-content: center;*/
     height:auto;
@@ -853,6 +858,7 @@ body {
 .bg {position:absolute; display: block; height:100%; width:100%; z-index:-20;}
 #bgxTop {position:relative; height:50%; width:100%; }
 #bgx {position:absolute; bottom:0px; height:50%; width:100%; object-fit:cover; }
+#big{height:102%;}
 .bc{
     
     display:flex;
@@ -963,7 +969,7 @@ button{
 }
 .spill {
     width:20%;
-    height:50%;
+    height:100%;
 }
 
 .scard {
