--- a/xs.css
+++ b/xs.css
@@ -976,6 +976,12 @@ button{
 .spill {
     width:20%;
     height:100%;
+    margin:-4px 1px;
+}
+
+.spill img{
+    width:100%;
+    height:100%;
 }
 
 .scard {
