--- a/xs.css
+++ b/xs.css
@@ -348,6 +348,9 @@
     margin:13% -1%;
     
 }
+   
+#bmm{position:absolute; left:0%;}
+#bms{height:300px; width:300px; top:-2em; z-index:-25;}
     
 }
 
@@ -391,7 +394,7 @@
     flex-wrap: wrap;
     flex-direction: column;
     align-items: flex-start;
-    position:fixed;
+    position:absolute;
     top: 15%;
     width:30%;
     list-style-type: none;
@@ -680,6 +683,9 @@
     margin:5% 11%;
     
 }
+   
+#bmm{height:400px; position:absolute; left:2%;}
+#bms{height:400px; width:400px; top:-8em; z-index:-25;}
     
 }
 
@@ -709,8 +715,8 @@
     to {opacity:1;}
 }
 #navbar {
-    opacity:0;
-    left:-100px;
+    opacity:1;
+    left:0px;
     transition: opacity 2s ease 0s, left 2s ease 0s;
 }
 
@@ -1024,9 +1030,8 @@ button{
     
     
 }
-
-
-
+#cs{position:fixed; height:1300px; width:2000px; z-index:-100;}
+#space{height:1300px; width:2000px; position:absolute; background:url("img/RAH-Web-Background.jpg");  }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
 /*
