--- a/xs.css
+++ b/xs.css
@@ -812,13 +812,15 @@ body {
 
 
 
-#sbg{height:230%; width:150%;}
+#sbg{height:230%; width:150%;}/*height:300%; width:115%;height:230%; width:150%;*/
 
 #navbar2{
     background: #222;    
     display: flex;
     align-items: stretch; /* Default */
     justify-content: space-between;
+    border-top: 10px solid #333;
+    border-bottom: 10px solid #111;
 }
 #navbar2 li{
     position:relative;
