--- a/xs.css
+++ b/xs.css
@@ -251,19 +251,37 @@
     left:0px;
     height:50%;
     width:25%;
-    transition: width 2s ease 0s, height 2s ease 0s, left 2s ease 0s, margin-left 2s ease 0s, opacity 2s ease 0s;
+    transition: left 1s ease 0s, margin-left 1s ease 0s, opacity 1s ease 0s;
     z-index:1;
     opacity:0;
     
 }
-    .activeSlide2 {
+    .slide2 img{
+        display:flex;
+        height:100%;
+        width:100%;
+        transition: transform 10s ease 0s;
+        margin:auto;
+        justify-content: space-evenly;
+        transform:scale(0.9);
+    }
+
+.activeSlide2 {
     height:100%;
     width:100%;
-    margin-left:-20%;
+    margin-left:0%;
     z-index:3;
     opacity:1;
     
 }
+    
+
+
+    .activeSlide2 img{
+        height:100%;
+        width:100%;
+        transform:scale(1);
+    }
     
 .listitem{
    
@@ -639,20 +657,33 @@ background-repeat: no-repeat; background-size: cover;
     left:0px;
     height:50%;
     width:25%;
-    transition: width 2s ease 0s, height 2s ease 0s, left 2s ease 0s, margin-left 2s ease 0s, opacity 2s ease 0s;
+    transition: left 1s ease 0s, margin-left 1s ease 0s, opacity 2s ease 0s;
     z-index:1;
     opacity:0;
     
 }
+    .slide2 img{
+        display:flex;
+        height:100%;
+        width:100%;
+        transition: transform 10s ease 0s;
+        margin:auto;
+        justify-content: space-evenly;
+        transform:scale(0.9);
+    }
 .activeSlide2 {
     height:100%;
     width:100%;
-    margin-left:-20%;
+    margin-left:0%;
     z-index:3;
     opacity:1;
     
 }
-    
+    .activeSlide2 img{
+        height:100%;
+        width:100%;
+        transform:scale(1);
+    }
 .listitem{
    
     width:30%;
@@ -960,7 +991,13 @@ body {
     opacity:0.5;
     margin-left:0%;
 }
-
+.nextSlide2 {
+    height:100%;
+    width:100%;
+    z-index:2;
+    opacity:0;
+    margin-left:0%;
+}
 
 
 .footer {
