--- a/xs.css
+++ b/xs.css
@@ -33,6 +33,7 @@
     position:relative;
     height:100%;
     width:100%;
+    
 }
 
 
@@ -258,12 +259,13 @@
 }
     .slide2 img{
         display:flex;
-        height:50%;
+        height:100%;
         width:100%;
         transition: transform 10s ease 0s;
         margin:auto;
         justify-content: space-evenly;
-        transform:scale(1);
+        transform:scale(0.9);
+        object-fit: cover;
     }
 
 .activeSlide2 {
@@ -272,17 +274,18 @@
     margin-left:0%;
     z-index:3;
     opacity:1;
-    top: 5%;
+    
     
 }
     
 
 
     .activeSlide2 img{
-        height:50%;
+        height:100%;
         width:100%;
-        transform:scale(1.5);
-        top: 5%;
+        transform:scale(1.05);
+        object-fit: cover;
+        
     }
     .nextSlide2 {
     height:100%;
@@ -290,7 +293,7 @@
     z-index:2;
     opacity:0;
     margin-left:0%;
-    top: 10%;   
+      
 }
     
 .listitem{
@@ -665,8 +668,8 @@ background-repeat: no-repeat; background-size: cover;
     position:absolute;
     flex-direction: row;
     left:0px;
-    height:50%;
-    width:25%;
+    height:100%;
+    width:100%;
     transition: left 1s ease 0s, margin-left 1s ease 0s, opacity 2s ease 0s;
     z-index:1;
     opacity:0;
@@ -680,6 +683,8 @@ background-repeat: no-repeat; background-size: cover;
         margin:auto;
         justify-content: space-evenly;
         transform:scale(0.9);
+       
+        object-fit: cover;
     }
 .activeSlide2 {
     height:100%;
@@ -690,9 +695,11 @@ background-repeat: no-repeat; background-size: cover;
     
 }
     .activeSlide2 img{
+        
         height:100%;
         width:100%;
-        transform:scale(1);
+        transform:scale(1.05);
+        object-fit: cover;
     }
     .nextSlide2 {
     height:100%;
@@ -714,7 +721,7 @@ background-repeat: no-repeat; background-size: cover;
     height:80%;
     width:80%;
     margin-left:10%;
-    
+    object-fit: contain;
     
     /*background-color: whitesmoke;*/
 }
@@ -783,7 +790,7 @@ background-repeat: no-repeat; background-size: cover;
     padding:0 1em;
 }
 .mcard {height:100%; width:350px; float:left;}
-.mcard img{height:80%; width:60%; margin-left:20%; }
+.mcard img{height:80%; width:60%; margin-left:20%; object-fit: contain; }
 .mcard span{
     font-family:primus,serif;
     font-size:1em;
@@ -796,7 +803,7 @@ background-repeat: no-repeat; background-size: cover;
 }
     
 .gcard{float:left; height:20%; width:20%; margin:2%;}
-.gcard img{height:100%; width:100%;}
+.gcard img{height:100%; width:100%; }
 .gallery{
     display:flex;
         flex-direction: row;
@@ -816,6 +823,7 @@ background-repeat: no-repeat; background-size: cover;
     width:77%;
     margin-top: 5%;
     margin-left:-2%;
+    object-fit: contain;
 }
  
 #logo img {
@@ -1112,6 +1120,7 @@ button{
     position:relative;
     height:100%;
     width:100%;
+    object-fit: contain;
 }
 .hhcard {
     display: block;
