--- a/xs.css
+++ b/xs.css
@@ -1135,6 +1135,7 @@ button{
     position:relative;
     height:100%;
     width:100%;
+    object-fit: contain;
 }
 .left {float:left;}
 .bottom{position:absolute; bottom:0;}
