--- a/xs.css
+++ b/xs.css
@@ -1200,12 +1200,41 @@ button{
     
     
 }
+.bgcb{background-color: #000;}
 #backdrop{position:relative; }
 #backdrop img{object-fit: contain; }
 #content{background:transparent; }
 
 #toptear{height:0px;}
-
+#ceevee{ position:relative;}
+#avatar{top:-12em; position:relative;}
+#siga{top:-4em;}
+#navbar3{
+    background: #000;    
+    display: flex;
+    align-items: stretch; /* Default */
+    justify-content: space-between;
+    border-top: 10px solid #000;
+    border-bottom: 10px solid #000;
+    padding: 5px 0;
+}
+#navbar3 li{
+    position:relative;
+    display:inline-block;
+    margin: auto;
+    
+}
+#navbar3 li a{
+    
+    text-decoration: none;
+    color:lightgrey;
+    font-size: 2em;
+    font-family: blackdrama,sans-serif;
+    font-variant:small-caps;
+    letter-spacing: 0.2rem;
+    margin: auto;
+        
+}
 /* Hide scrollbar for Chrome, Safari and Opera */
 /*
 .scrollcontain::-webkit-scrollbar {
