--- a/xs.css
+++ b/xs.css
@@ -1206,11 +1206,16 @@ button{
 #content{background:transparent; }
 
 #toptear{height:0px;}
-#ceevee{ position:relative;}
-#avatar{top:-12em; position:relative;}
+#ceevee{ width:40%; position:relative; color:white; font-family: minionpro;}
+#ceevee p {font-size: 1em;}
+#ceevee h1{margin:0.15em 0;}
+#ceevee h2{font-size:1em; color:#b0b5b8;}
+#ceevee span{}
+#ceevee ul li{color:#b0b5b8;}
+#avatar{top:-16em; position:relative; width:60%;}
 #siga{top:-4em;}
 #navbar3{
-    background: #000;    
+    background: transparent;    
     display: flex;
     align-items: stretch; /* Default */
     justify-content: space-between;
@@ -1235,7 +1240,7 @@ button{
     margin: 0.1em;
         
 }
-
+#wid2{width:200%;}
 #minihead{}
 #minihead img {}
 /* Hide scrollbar for Chrome, Safari and Opera */
