--- a/xs.css
+++ b/xs.css
@@ -1243,6 +1243,9 @@ button{
 #wid2{width:200%;}
 #minihead{}
 #minihead img {}
+
+#artgallery{position: absolute; top:0; display:none;}
+
 /* Hide scrollbar for Chrome, Safari and Opera */
 /*
 .scrollcontain::-webkit-scrollbar {
