--- a/xs.css
+++ b/xs.css
@@ -1244,7 +1244,7 @@ button{
 #minihead{}
 #minihead img {}
 
-#artgallery{position: relative; top:0; display:none;}
+#artgallery{position: absolute; top:0; display:none;}
 #namelogo{ width:130%; filter: drop-shadow(30px 10px 4px #4444dd);}
 /* Hide scrollbar for Chrome, Safari and Opera */
 /*
