--- a/xs.css
+++ b/xs.css
@@ -1245,7 +1245,7 @@ button{
 #minihead img {}
 
 #artgallery{position: absolute; top:0; display:none;}
-#namelogo{ width:130%; filter: drop-shadow(30px 10px 4px #4444dd);}
+#namelogo{ width:130%; filter: drop-shadow(30px 10px 4px #000);}
 /* Hide scrollbar for Chrome, Safari and Opera */
 /*
 .scrollcontain::-webkit-scrollbar {
