--- a/xs.css
+++ b/xs.css
@@ -802,7 +802,8 @@ background-repeat: no-repeat; background-size: cover;
     padding:0;
 }
     
-.gcard{float:left; height:20%; width:20%; margin:2%;}
+.gcard{float:left; height:20%; width:20%; margin:2%; transition:transform 2s ease 0s; z-index:1;}
+    .gcard:hover{transform:scale(2); z-index: 200;}
 .gcard img{height:100%; width:100%; }
 .gallery{
     display:flex;
@@ -811,7 +812,7 @@ background-repeat: no-repeat; background-size: cover;
     justify-content: space-between;
     align-items: center;
 
-    overflow:hidden;
+    overflow:visible;
     /*align-content: center;*/
     height:auto;
     width:98%;
@@ -1246,6 +1247,25 @@ button{
 
 #artgallery{position: absolute; top:0; display:none;}
 #namelogo{ width:130%; }
+
+.bdslice{
+    height:375px;
+    width:auto;
+    float:left;
+    transition: transform 2s ease 0s;
+    z-index: 1;
+}
+.bdslice:hover{
+   transform:scale(1.5); z-index: 100; 
+}
+.bdslice img{
+    object-fit: contain;
+    z-index: -1;
+}
+.bdslice:hover img {
+    z-index: 100;
+}
+
 /*filter: drop-shadow(0px 0px 10px #000);*/
 /* Hide scrollbar for Chrome, Safari and Opera */
 /*
