--- a/xs.css
+++ b/xs.css
@@ -123,6 +123,13 @@
     color:grey;
     margin:5% 5%;
 }
+    .fcard hr {
+    position:relative;
+    top:4px;
+    background:url(img/hr.png);
+    height: 3px;
+    border:none;
+}
 
 .fl{
     width:100%;
@@ -142,7 +149,7 @@
 
 .fl a {
     width:50%;
-    background:grey;
+    background:transparent;
     margin:auto;
     font-size:0.6em;
 }
@@ -464,6 +471,32 @@ background-repeat: no-repeat; background-size: cover;
 #ceevee ul li{color:#b0b5b8; margin:0 1em;}
 #avatar{top:-8em; position:relative; width:60%;}
 #siga{top:-4em;}
+
+    #headlogo{
+    position:relative;
+    top:0.2em;
+    display: block;
+    height: 100%;
+    width: 65%;
+    margin: auto;
+    
+}
+   
+    #menubar{
+    position:relative;
+    display: flex;
+    height:65px;
+    width:65px;
+    left:0;
+    padding:0.5em;
+    z-index:2;
+}
+    
+    .nava{
+    position:absolute;
+    height:65px;
+    width:65px;
+}
     
 }
 
@@ -563,7 +596,14 @@ background-repeat: no-repeat; background-size: cover;
     color:grey;
     margin:2% 2%;
 }
-
+.fcard hr {
+    position:relative;
+    top:1em;
+    background:url(img/hr.png);
+    height: 3px;
+    border:none;
+}
+    
 .fl{
     width:100%;
     display:block;
@@ -582,7 +622,7 @@ background-repeat: no-repeat; background-size: cover;
 
 .fl a {
     width:50%;
-    background:grey;
+    background:transparent;
     margin:auto;
     font-size:1em;
 }
@@ -904,6 +944,42 @@ background-repeat: no-repeat; background-size: cover;
 #ceevee ul li{color:#b0b5b8;}
 #avatar{top:-16em; position:relative; width:60%;}
 #siga{top:-4em;}
+ 
+    #headlogo{
+    position:relative;
+    top:0.5em;
+    display: block;
+    height: 150px;
+    width: 100%;
+    margin: auto;
+        object-fit: contain;
+    
+}
+    #hla{
+        
+        height: 50px;
+    width: 100%;
+    margin: auto;
+        object-fit: contain;
+        
+        
+    }
+  
+    #menubar{
+    position:relative;
+    display: flex;
+    height:150px;
+    width:150px;
+    left:0;
+    padding:0.5em;
+    z-index:2;
+}
+    
+    .nava{
+    position:absolute;
+    height:165px;
+    width:165px;
+}
     
 }
 
@@ -1248,6 +1324,7 @@ button{
 .fcard a{
     border-radius: 5px;
 }
+
 .scrollcontain{
     overflow-y:hidden;
     overflow-x:auto;
@@ -1261,18 +1338,8 @@ button{
 
 #toptear{height:0px;}
 
-#headlogo{
-    
-}
-#menubar{
-    position:relative;
-    display: flex;
-    height:65px;
-    width:65px;
-    left:0;
-    padding:1em;
-    z-index:2;
-}
+
+
 #navbar3{
        position:absolute;
     top:-100%;
@@ -1297,7 +1364,7 @@ button{
    text-align: left;
     transition:color 0.25s ease 0.25s;
     text-decoration: none;
-    color:lightgrey;
+    color:whitesmoke;
     font-size: 1.5em;
     font-family: blackdrama,sans-serif;
     font-variant:small-caps;
@@ -1305,7 +1372,7 @@ button{
     margin: 0.1em;
         
 }
-#navbar3 li a:hover{ color:whitesmoke;}
+#navbar3 li a:hover{ color:red;}
 .wid2{width:200%; margin:0 1em;}
 #minihead{height:auto; }
 #minihead img {}
@@ -1325,6 +1392,8 @@ button{
     z-index: 100;
 }
 #hg{display:none;}
+
+
 /*filter: drop-shadow(0px 0px 10px #000);*/
 /* Hide scrollbar for Chrome, Safari and Opera */
 /*
