--- a/xs.css
+++ b/xs.css
@@ -868,13 +868,13 @@ background-repeat: no-repeat; background-size: cover;
 }
     
 .gcard{float:left; height:20%; width:20%; margin:2%; transition:transform 2s ease 0s; z-index:1;}
-    .gcard:hover{transform:scale(2); z-index: 200;}
+    .gcard:hover{transform:scale(1.25); z-index: 200;}
 .gcard img{height:100%; width:100%; }
 .gallery{
     display:flex;
         flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
 
     overflow:visible;
@@ -1382,7 +1382,7 @@ button{
 
 
 .bdslice:hover{
-   transform:scale(1.5); z-index: 100; 
+   transform:scale(1.25); z-index: 100; 
 }
 .bdslice img{
     object-fit: contain;
@@ -1392,8 +1392,16 @@ button{
     z-index: 100;
 }
 #hg{display:none;}
-
-
+#fade{
+     height:300px;
+}
+#fade img{
+    position:relative;
+    bottom:-8px;
+    
+    height:100%;
+}
+.qh{height:25%;}
 /*filter: drop-shadow(0px 0px 10px #000);*/
 /* Hide scrollbar for Chrome, Safari and Opera */
 /*
