--- a/xs.css
+++ b/xs.css
@@ -880,7 +880,7 @@ background-repeat: no-repeat; background-size: cover;
     overflow:visible;
     /*align-content: center;*/
     height:auto;
-    width:98%;
+    width:100%;
     padding:0%;
 }
   
@@ -1402,6 +1402,15 @@ button{
     height:100%;
 }
 .qh{height:25%;}
+
+#info{
+    position:absolute;
+    z-index:2;
+}
+#ft img{
+    position:relative;
+    bottom:-10px;
+}
 /*filter: drop-shadow(0px 0px 10px #000);*/
 /* Hide scrollbar for Chrome, Safari and Opera */
 /*
