--- a/xs.css
+++ b/xs.css
@@ -123,7 +123,7 @@
     color:grey;
     margin:5% 5%;
 }
-    .fcard hr {
+    .card hr {
     position:relative;
     top:4px;
     background:url(img/hr.png);
@@ -596,13 +596,24 @@ background-repeat: no-repeat; background-size: cover;
     color:grey;
     margin:2% 2%;
 }
-.fcard hr {
+.card hr {
     position:relative;
     top:1em;
-    background:url(img/hr.png);
+    background-image:url(img/hr.png);
+    background-size:contain;
+    background-repeat:  repeat;
     height: 3px;
+    width:100%;
     border:none;
 }
+    /*
+.card hr:after{
+    content:url(img/svg/whiterose.svg);
+    display: inline-block;
+    
+    
+}
+    */
     
 .fl{
     width:100%;
@@ -867,13 +878,13 @@ background-repeat: no-repeat; background-size: cover;
     padding:0;
 }
     
-.gcard{float:left; height:20%; width:20%; margin:2%; transition:transform 2s ease 0s; z-index:1;}
-    .gcard:hover{transform:scale(1.25); z-index: 200;}
+.gcard{float:left; height:100%; width:100%; margin:2%; transition:transform 2s ease 0s; z-index:1;}
+  /*  .gcard:hover{transform:scale(1.25); z-index: 200;}*/
 .gcard img{height:100%; width:100%; }
 .gallery{
     display:flex;
-        flex-direction: row;
-    flex-wrap: wrap;
+        flex-direction: column;
+    flex-wrap: nowrap;
     justify-content: flex-start;
     align-items: center;
 
@@ -1404,13 +1415,25 @@ button{
 .qh{height:25%;}
 
 #info{
+    height:auto;
+    bottom:0px;
     position:absolute;
     z-index:2;
+}
+#copy{
+    height:auto;
+    bottom:0px;
+    position:relative;
+    z-index:2;
+    text-align:center;
+    font-size:0.5em;
 }
 #ft img{
     position:relative;
     bottom:-10px;
 }
+
+
 /*filter: drop-shadow(0px 0px 10px #000);*/
 /* Hide scrollbar for Chrome, Safari and Opera */
 /*
